assets/css/game.css
/* ... */
#infoScreenAttacks {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-auto-rows: 1fr;
    grid-gap: 1rem;

    padding-top: 1rem;
    padding-bottom: 1rem;

    width: 33%;
}

body.stowed {
    width: unset;
    margin-left: 10vw;
    margin-right: 10vw;
}

#infoScreen.stowed {
    display: none;
}

#infoScreenTitle {
    display: block;

    padding: 1rem 0;

    color: rgb(80, 80, 80);
    font-size: 2.5rem;
    font-family: backslash;

    transition: var(--chapter-text-transition);

    text-align: center;
    line-height: 3rem;
}

#infoScreenDescription {
    /* display: block; */
    display: none;

    padding: 1rem;

    border: 1px solid hsl(312deg 74% 16% / 0%);
    border-radius: 8px;
    box-shadow: inset -0.05rem 0.1rem 0.5rem rgb(0, 0, 0);
    background-color: hsl(0, 0%, 40%);
}

#infoName {
    display: inline;

    /* font-weight: 600; */
    font-weight: bold;
    overflow: auto;
    word-break: break-all;
    text-overflow: unset;
    white-space: normal;
    vertical-align: top;
}

#infoVariant {
    display: block;

    /* font-weight: 600; */
    font-weight: bold;
    color: grey;

    padding-top: 2px;

    outline: 0;
}

#infoMetrics,
#infoResistances,
#infoTargeting,
#infoDamage {
    padding-top: 8px;
}

#infoScreenDescription grid {
    display: grid;
    margin-left: -8px;

    column-gap: 0.5rem;
    row-gap: 0.05rem;
    font-size: 0.95rem;

    padding-bottom: 8px;
}

#infoMetricsGrid {
    grid-auto-flow: column;

    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr;
}

#infoResistanceGrid,
#infoDamageGrid {
    grid-auto-flow: column;

    grid-template-rows: auto 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;
}

#infoMetricsAttacksGrid {
    grid-auto-flow: column;

    grid-template-rows: 1fr;
    grid-template-columns: 1fr 1fr;
}

#infoTargetingGrid {
    /* */
}

.divider {
    display: block;
    position: sticky;

    top: 0;
    height: 1px;

    margin-top: 8px;

    background-color: rgba(25, 25, 25, 0.5);
}

.infoSectionHeader {
    display: block;

    /* font-weight: 700; */
    font-weight: bold;

    margin-bottom: 6px;
    font-size: 12px;
    line-height: 16px;

    text-transform: uppercase;
}

#infoScreenMiddleMenuButtons {
    display: block;
    position: fixed;
    width: 20vw;

    padding-bottom: 5vh;
}

#infoScreenBottomMenuButtons {
    display: block;
    position: fixed;
    width: 20vw;
    bottom: 0;

    padding-bottom: 5vh;
}

.bottomInfoButton {
    display: block;
    width: 100%;
    margin: 0.35rem 0;
}

.equippableInfoScreen {
    display: block;

    margin-top: 0.5rem;
}

.equippableInfoScreen button {
    width: 30%;
    font-size: 1rem;
}

#weaponInfoScreenButtons,
#armorInfoScreenButtons,
#accessoryInfoScreenButtons {
    display: block;

    margin-top: 0.5rem;
}

.dialogEquipmentSwap,
.dialogEquipmentMod {
    width: 60vw;
    height: 40vh;
}

/**
 *    ###     ######   ######   #######  ########  ########  ####  #######  ##    ## 
 *   ## ##   ##    ## ##    ## ##     ## ##     ## ##     ##  ##  ##     ## ###   ## 
 *  ##   ##  ##       ##       ##     ## ##     ## ##     ##  ##  ##     ## ####  ## 
 * ##     ## ##       ##       ##     ## ########  ##     ##  ##  ##     ## ## ## ## 
 * ######### ##       ##       ##     ## ##   ##   ##     ##  ##  ##     ## ##  #### 
 * ##     ## ##    ## ##    ## ##     ## ##    ##  ##     ##  ##  ##     ## ##   ### 
 * ##     ##  ######   ######   #######  ##     ## ########  ####  #######  ##    ## 
 */

accordionSection {
    margin-bottom: 3rem;
}

.accordionLabel {
    font-size: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 1rem;
    margin-bottom: 0.5rem;
    background: #b61818;
    font-weight: bold;
    cursor: pointer;
    user-select: none;
    box-shadow: var(--boxShadow);
    border-radius: 20px;

    font-size: 20px;
    text-shadow: 1px 1px 3px black;
}

.accordionLabel::after {
    content: "\002B";
    padding: 0.5rem;
    transform: scale(1.8);
    text-align: center;
    transition: all 0.35s;
}

accordionContent {
    max-height: 0;
    padding: 0 0.5rem 0.5rem;
    transition: all 0.35s;
    display: none;
}

accordionSection input[type="checkbox"] {
    position: absolute;
    opacity: 0;
    z-index: -1;
}

input:checked + .accordionLabel {
    background: #8f1414;
}

input:checked + .accordionLabel::after {
    content: "\2013";
    transform: scale(1.5);
}

input:checked ~ accordionContent {
    max-height: 100vh;
    padding: 0.5rem 0.75rem;
    display: block;
    transition: all 0.35s;
}

/**
 * ##     ## ####  
 * ##     ##  ##   
 * ##     ##  ##   
 * ##     ##  ##   
 * ##     ##  ##   
 * ##     ##  ##   
 *  #######  ####  
 *
 * Including (former) UIBar contents.
 */

.knowledge {
    display: block;

    margin-top: 1.5rem;
    margin-left: 1rem;
    margin-bottom: -1.25rem;

    line-height: 1.5rem;
    font-weight: bold;
    text-decoration: white underline;
}

.subknowledge {
    display: block;

    margin-left: 2rem;
    margin-bottom: -1.25rem;

    text-decoration: underline;
}

#menu-core li[id|="menu-item"] a:before,
#debug-bar-toggle:before,
#ui-bar-history [id|="history"],
#ui-bar-toggle:before {
    /* Makes the Font Awesome icons not bold. Only needed until next SugarCube update. */
    font-weight: 400;
}

.dialog-header {
    display: block;

    margin-top: 0.67rem;
    margin-bottom: 0.67rem;
    margin-left: 0;
    margin-right: 0;

    font-size: 2rem;
    font-weight: bold;
    text-align: center;
    text-decoration: underline 2px;
}

#ui-dialog {
    max-width: 65vw;
}

#mainwrapper {
    margin-left: auto;
    margin-right: auto;

    box-shadow: var(--boxShadow);
    border-radius: 20px;

    background-color: rgb(40, 40, 40);
}

#wrapperBottomText {
    padding: 3rem;
    color: hsl(0deg 0% 65%);
}
/* ... */

